--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "@vitejs/plugin-react": "^4.0.0",
+    "axios": "^1.4.0",
+    "dotenv": "^16.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-stars": "^2.2.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "@types/node-sass": "^4.11.3",
+    "@types/react-stars": "^2.2.1",
     "node-sass": "^7.0.3",
     "sass": "^1.62.1",
     "vite": "^4.3.9"
